--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-howler": "^5.2.0",
+    "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
